Fix body width overflow

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
 body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
+    padding: 0;
     min-height: 100vh;
 }
 
@@ -23,6 +24,7 @@ body {
 .row {
     display: flex;
     flex-direction: row;
+    justify-content: space-between;
 }
 
 .column {
@@ -100,7 +102,6 @@ a {
 .hero {
     background-color: #1F2937;
     color: #F9FAF8;
-    width: 80%;
     padding: 10px 20% 50px 20%;
 }
 
